# MyBlogs

./: .gitmodules  GPU_CPU.md  readme.md
AI/autogen/: README.md  client_ollama.py  custom_model_client.py  pyproject.toml  requirements.txt
AI/autogen/companyresearch/: agent.py  custom_model_client.py  teams.py  tools.py
AI/autogen/helper/: tool.py
AI/chatbot/: README.md  requirements.txt  run_app.sh
AI/chatbot/mcp/: Dockerfile  README.md  client.py  deploy.sh  requirements.txt  server.py
AI/chatbot/mcp/helm/mcp-server/: Chart.yaml  values.yaml
AI/chatbot/src/: agent.py  app.py  load_data.py  milvus_example.db  store.py
AI/chatbot/test/: test_agent.py  test_behavior.py  test_specific.py
AI/dify-rag/: client.py  readme.md
AI/langchain/: ollama_app.py  qwen_app.py  readme.md  requirements.txt
AI/ollama/: client.py  readme.md
AI/vectordatabase/milvus/: client.py
AI/vectordatabase/weaviate/: client.py  install.sh  requirements.txt  state_of_the_union.txt  values.yaml
AI/vectordatabase/weaviate/statistic/: all_class.py  export_all_data.py  objects.py  objects_langchain.py  statistic.py
docker/: Dockerfile  readme.md
git/: readme.md
k8s/: readme.md
k8s/QA/: readme.md
k8s/resources/core/: readme.md
k8s/resources/workload/daemonset/: daemonset.yaml  readme.md
k8s/resources/workload/statefuleset/: StatefulSet.yaml  readme.md
k8s/troubleshooting/: pod.md  pod.sh
linux/: readme.md
linux/shell/: a.csv  awk.sh  grep.sh  log.txt  memory.sh  user.sh
slurm/: readme.md
terraform/: readme.md
(+2 files in other folders)
